# archmage-rs

./: .env  .gitignore  CMDAPI.md  Cargo.toml  dbsetup.sh  sqlx-data.json
migrations/: 20211222215537_archmage.sql
src/: archmage.rs  main.rs  util.rs
src/command/: mod.rs  ping.rs
src/command/config/: mod.rs
src/command/misc/: mod.rs  roll.rs
src/command/music/: leave.rs  mod.rs  nowplaying.rs  pause.rs  play.rs  playnow.rs  queue.rs  repeat.rs  shuffle.rs  skip.rs  stop.rs
src/command/roll/: mod.rs  parser.rs
src/database/: campaigns.rs  guild_global.rs  mod.rs  users.rs
src/model/: campaign.rs  mod.rs  user.rs
