[package]
name = "archmage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
serde = "^1.0"
serde_json = "^1"
toml = "^0.6"
lazy_static = "^1.4.0"
regex = "^1.7"
rand = "^0.8"
chrono = "^0.4"
bincode = "^1.2"
futures = "^0.3"
eyre = "^0.6"

[dependencies.uuid]
version = "^1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "cache",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "unstable_discord_api",
]
version = "^0.11"