[package]
name = "archmage"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "^0.1.29"
tracing-subscriber = "^0.3.3"
serde = "^1.0"
serde_json = "^1"
toml = "^0.5.8"
lazy_static = "^1.5.0"
regex = "^1.5.4"
rand = "^0.8.4"
chrono = "^0.4.19"
bincode = "1.2.1"
futures = "0.3.19"
eyre = "^0.6"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "cache",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "unstable_discord_api",
]
version = "^0.12"